<?xml version="1.0"?>
<package format="3">
    <name>ros2_joy_twist</name>
    <version>0.1.0</version>
    <description>Joystick to Twist mapper with turtlesim test</description>
    <maintainer email="you@example.com">You</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>turtlesim</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>